added forgotPassword and list logged user funcionalities and update swagger
