# src/routes.js
@@ -10,10 +10,12 @@ const routes = new Router();
 
 routes.get('/users', UserController.index);
 routes.post('/users', UserController.store);
+routes.put('/users/forgotPassword', UserController.forgotPassword);
 
 routes.post('/sessions', SessionController.store);
 
 routes.use(authMiddleware);
+routes.get('/sessions', SessionController.index);
 
 routes.get('/scheduling', SchedulingController.index);
 routes.get(
